# yobo-gestion

./: .gitignore  .taurignore  README.md  eslint.config.js  index.html  lint_output.txt  netlify.toml  package-lock.json  package.json  prd.md  talwidconfig.md  vite.config.ts  vitest.config.ts  yobo-new-updater.key  yobo-new-updater.key.pub
.cursor/rules/: yobo-frontend-react.mdc  yobo-frontend-ts.mdc  yobo-project-core.mdc  yobo-tauri-rust.mdc  yobo-vitest.mdc
.github/workflows/: ci.yml  release-windows.yml  release.yml
distribution/: LISEZMOI-UTILISATEUR.txt
netlify-updates/: LISEZMOI.txt  README.md  index.html
scripts/: build-user-release.ps1  debug-yobo.mjs  debug-yobo.ps1  generate-nsis-installer-assets.ps1  tauri-build-release.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: .updater.key.pub  Cargo.toml  tauri.conf.json  yobo.sqlite
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: authz.rs  db.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  backups.rs  cash_session.rs  catalog.rs  catalog_csv.rs  database_backup.rs  database_purge.rs  exports.rs  logs_admin.rs  menu.rs  mod.rs  orders.rs  printers.rs  screenshot.rs  system.rs  ticket_settings.rs  users.rs
src/components/: EmojiPicker.tsx  SizeTarifList.tsx  YoboAppContextMenu.tsx  YoboAppModals.tsx  YoboAppNavBar.tsx  YoboAvatarPicker.tsx  YoboErrorBoundary.tsx  YoboKeyboardInputs.tsx  YoboModal.tsx  YoboNavIcons.tsx  YoboPagination.tsx  YoboProfilWelcomeModal.tsx  YoboSessionEntrySplash.tsx  YoboTitleBar.tsx  YoboToastStack.tsx  YoboUpdater.tsx  YoboVirtualKeyboard.tsx
src/data/: menuFallback.ts  yoboEmojis.ts
src/hooks/: useYoboObscureLoginShell.ts
src/lib/: backups.ts  captureMainWindowScreenshot.ts  catalogCsv.ts  escposTextBuilder.ts  exportHistoriqueVentes.ts  exportLogsCsv.ts  formatDateHeureFr.ts  historiqueFilters.ts  historySessionFormats.ts  imageProcessing.ts  index.ts  isTauriRuntime.ts  logLabelsFr.ts  normalizeCategoryKey.test.ts  normalizeCategoryKey.ts  orderStatus.ts  pagination.test.ts  pagination.ts  parseMad.test.ts  parseMad.ts  productSizes.ts  profilWelcomeStorage.ts  ticketPrint.ts  (+14 more)
updater/: windows-x86_64.json
(+25 files in other folders)
