[package]
name = "yobo"
version = "2.6.9"
description = "YOBO — Caisse et gestion pour snack (données locales)"
authors = ["YOBO"]
license = ""
edition = "2021"
rust-version = "1.78"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rusqlite = { version = "0.39.0", features = ["bundled"] }
bcrypt = "0.19.0"
dirs = "6.0.0"
rfd = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
image = { version = "0.25", default-features = false, features = ["png"] }
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_Xps", "Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Printing", "Win32_System_Power"] }
tauri-plugin-printer-v2 = "0.2.4"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

